--- a/about.html
+++ b/about.html
@@ -42,8 +42,14 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
+      <nav class="navbar navbar-light ">
+        <a class="navbar-brand" href="index.html">
+        <img src="assets/img/logo.jpeg" width="50" height="50" alt="" loading="lazy">
+        </a>
+       </nav>
+
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.jpeg" alt="" class="img-fluid"></a>
+      <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.jpeg" alt="" class="img-fluid"></a> -->
       <h1 class="logo mr-auto"><a href="index.html">DEPTH</a></h1>
 
       <nav class="nav-menu d-none d-lg-block">
@@ -52,7 +58,7 @@
           <li class="active"><a href="about.html">About</a></li>
           <li><a href="courses.html">Projects</a></li>
           <li><a href="trainers.html">Mentors</a></li>
-          <li><a href="events.html">Events</a></li>
+          <!-- <li><a href="events.html">Events</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <li class="drop-down"><a href="">Drop Down</a>
             <ul>
@@ -65,12 +71,12 @@
                   <li><a href="#">Deep Drop Down 4</a></li>
                   <li><a href="#">Deep Drop Down 5</a></li>
                 </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
+              </li> -->
+              <!-- <li><a href="#">Drop Down 2</a></li>
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
             </ul>
-          </li>
+          </li> -->
           <li><a href="contact.html">Contact</a></li>
 
         </ul>
@@ -125,24 +131,24 @@
 
         <div class="row counters">
 
-          <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">1232</span>
+          <div class="col-sm-4 col-6 text-center">
+            <span data-toggle="counter-up">80</span>
             <p>Students</p>
           </div>
 
-          <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">64</span>
-            <p>Courses</p>
+          <div class="col-sm-4 col-6 text-center">
+            <span data-toggle="counter-up">12</span>
+            <p>Projects</p>
           </div>
 
-          <div class="col-lg-3 col-6 text-center">
+          <!-- <div class="col-lg-3 col-6 text-center">
             <span data-toggle="counter-up">42</span>
             <p>Events</p>
-          </div>
+          </div> -->
 
-          <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">15</span>
-            <p>Trainers</p>
+          <div class="col-sm-4 col-6 text-center">
+            <span data-toggle="counter-up">8</span>
+            <p>Mentors</p>
           </div>
 
         </div>
