--- a/contact.html
+++ b/contact.html
@@ -41,9 +41,14 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
+      <nav class="navbar navbar-light ">
+        <a class="navbar-brand" href="index.html">
+        <img src="assets/img/logo.jpeg" width="50" height="50" alt="" loading="lazy">
+        </a>
+       </nav>
 
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.jpeg" alt="" class="img-fluid"></a>
+      <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.jpeg" alt="" class="img-fluid"></a> -->
       <h1 class="logo mr-auto"><a href="index.html">DEPTH</a></h1>
 
       <nav class="nav-menu d-none d-lg-block">
@@ -52,7 +57,7 @@
           <li><a href="about.html">About</a></li>
           <li><a href="courses.html">Projects</a></li>
           <li><a href="trainers.html">Mentors</a></li>
-          <li><a href="events.html">Events</a></li>
+          <!-- <li><a href="events.html">Events</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <li class="drop-down"><a href="">Drop Down</a>
             <ul>
@@ -69,8 +74,8 @@
               <li><a href="#">Drop Down 2</a></li>
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>
+            </ul> -->
+          <!-- </li>? -->
           <li class="active"><a href="contact.html">Contact</a></li>
 
         </ul>
@@ -94,7 +99,8 @@
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div data-aos="fade-up">
-        <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
+        <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d55968.01203526608!2d77.1373902!3d28.7493945!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x87d470ca1c30d1b0!2sDelhi%20Technological%20University!5e0!3m2!1sen!2sin!4v1608573853249!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <!-- <iframe style="border:0; width: 100%; height: 350px;" src="https://goo.gl/maps/skc5ZPiMjJjEA7Xm8" frameborder="0" allowfullscreen></iframe> -->
       </div>
 
       <div class="container" data-aos="fade-up">
@@ -106,19 +112,19 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Delhi Technological University, Shahbad Daulatpur, Main Bawana Road, Delhi-110042. India</p>
               </div>
 
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>kira@deathnote.com</p>
               </div>
 
               <div class="phone">
                 <i class="icofont-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>Hello from the other side</p>
               </div>
 
             </div>
