--- a/index.html
+++ b/index.html
@@ -42,8 +42,15 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
+      <!-- Just an image -->
+    <nav class="navbar navbar-light ">
+     <a class="navbar-brand" href="index.html">
+     <img src="assets/img/logo.jpeg" width="50" height="50" alt="" loading="lazy">
+     </a>
+    </nav>
+
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.jpeg" alt="" class="img-fluid"></a>
+      <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.jpeg" alt="" class="img-fluid"></a> -->
       <h1 class="logo mr-auto"><a href="index.html">DEPTH</a></h1>
 
       <nav class="nav-menu d-none d-lg-block">
@@ -52,11 +59,11 @@
           <li><a href="about.html">About</a></li>
           <li><a href="courses.html">Projects</a></li>
           <li><a href="trainers.html">Mentors</a></li>
-          <li><a href="events.html">Events</a></li>
-          <li><a href="pricing.html">Pricing</a></li>
-          <li class="drop-down"><a href="">Drop Down</a>
+          <!-- <li><a href="events.html">Events</a></li> -->
+          <!-- <li><a href="pricing.html">Pricing</a></li> -->
+          <!-- <li class="drop-down"><a href="">Drop Down</a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
+              <li><a href="#"></a></li>
               <li class="drop-down"><a href="#">Deep Drop Down</a>
                 <ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
@@ -70,7 +77,7 @@
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
             </ul>
-          </li>
+          </li> -->
           <li><a href="contact.html">Contact</a></li>
 
         </ul>
@@ -85,7 +92,7 @@
   <section id="hero" class="d-flex justify-content-center align-items-center">
     <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
       <h1>Learning Today,<br>Leading Tomorrow</h1>
-      <h2>We are team of talanted designers making websites with Bootstrap</h2>
+      <h2>We are a team of enthusiastic bunch of researchers</h2>
       <a href="courses.html" class="btn-get-started">Get Started</a>
     </div>
   </section><!-- End Hero -->
@@ -132,24 +139,24 @@
 
         <div class="row counters">
 
-          <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">1232</span>
+          <div class="col-sm-4 col-6 text-center">
+            <span data-toggle="counter-up">80</span>
             <p>Students</p>
           </div>
 
-          <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">64</span>
-            <p>Courses</p>
+          <div class="col-sm-4 col-6 text-center">
+            <span data-toggle="counter-up">12</span>
+            <p>Projects</p>
           </div>
 
-          <div class="col-lg-3 col-6 text-center">
+          <!-- <div class="col-lg-3 col-6 text-center">
             <span data-toggle="counter-up">42</span>
             <p>Events</p>
-          </div>
+          </div> -->
 
-          <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">15</span>
-            <p>Trainers</p>
+          <div class="col-sm-4 col-6 text-center">
+            <span data-toggle="counter-up">8</span>
+            <p>Mentors</p>
           </div>
 
         </div>
@@ -164,10 +171,9 @@
         <div class="row">
           <div class="col-lg-4 d-flex align-items-stretch">
             <div class="content">
-              <h3>Why Choose Mentor?</h3>
+              <h3>Why Choose Depth</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
-                Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad corporis.
+                Even I don't know
               </p>
               <div class="text-center">
                 <a href="about.html" class="more-btn">Learn More <i class="bx bx-chevron-right"></i></a>
@@ -387,8 +393,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Trainers</h2>
-          <p>Our Professional Trainers</p>
+          <h2>Mentors</h2>
+          <p>Bleh bleh bleh</p>
         </div>
 
         <div class="row" data-aos="zoom-in" data-aos-delay="100">
