--- a/pricing.html
+++ b/pricing.html
@@ -41,9 +41,14 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
+      <nav class="navbar navbar-light ">
+     <a class="navbar-brand" href="index.html">
+     <img src="assets/img/logo.jpeg" width="50" height="50" alt="" loading="lazy">
+     </a>
+    </nav>
 
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.jpeg" alt="" class="img-fluid"></a>
+      <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.jpeg" alt="" class="img-fluid"></a> -->
       <h1 class="logo mr-auto"><a href="index.html">DEPTH</a></h1>
 
       <nav class="nav-menu d-none d-lg-block">
@@ -51,7 +56,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="courses.html">Projects</a></li>
-          <li><a href="trainers.html">Mentors</a></li>
+          <!-- <li><a href="trainers.html">Mentors</a></li>
           <li><a href="events.html">Events</a></li>
           <li class="active"><a href="pricing.html">Pricing</a></li>
           <li class="drop-down"><a href="">Drop Down</a>
@@ -70,7 +75,7 @@
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
             </ul>
-          </li>
+          </li> -->
           <li><a href="contact.html">Contact</a></li>
 
         </ul>
