--- a/trainers.html
+++ b/trainers.html
@@ -52,7 +52,7 @@
           <li><a href="about.html">About</a></li>
           <li><a href="courses.html">Projects</a></li>
           <li class="active"><a href="trainers.html">Mentors</a></li>
-          <li><a href="events.html">Events</a></li>
+          <!-- <li><a href="events.html">Events</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <li class="drop-down"><a href="">Drop Down</a>
             <ul>
@@ -70,7 +70,7 @@
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
             </ul>
-          </li>
+          </li> -->
           <li><a href="contact.html">Contact</a></li>
 
         </ul>
@@ -86,7 +86,7 @@
     <!-- ======= Breadcrumbs ======= -->
     <div class="breadcrumbs">
       <div class="container">
-        <h2>Trainers</h2>
+        <h2>Mentors</h2>
         <p>Est dolorum ut non facere possimus quibusdam eligendi voluptatem. Quia id aut similique quia voluptas sit quaerat debitis. Rerum omnis ipsam aperiam consequatur laboriosam nemo harum praesentium. </p>
       </div>
     </div><!-- End Breadcrumbs -->
