Info and Footer

--- a/index.html
+++ b/index.html
@@ -113,19 +113,22 @@
             <img src="assets/img/logo.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>Depth is the official physics society of DTU</h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              It is a community of physics enthusiasts with a common goal of learning and sharing knowledge to help one understand the complexity of the universe
             </p>
             <ul>
-              <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              <li><i class="icofont-check-circled"></i>  Our aim is to act as a center of excellence for creating an environment of technological
+                innovation and solving problems using scientific approach</li>
+              <li><i class="icofont-check-circled"></i> We try to develop an inclination towards
+                research in various fields of physics such as nanotechnology, nuclear technology, microwave and
+                optical communications etc. among the students. </li>
+              <li><i class="icofont-check-circled"></i> The goal is to create a 'CHANGE' with out of the
+                box ideas and guiding individuals to build them into the creators of this change.</li>
             </ul>
-            <p>
+            <!-- <p>
               Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-            </p>
+            </p> -->
             <a href="about.html" class="learn-more-btn">Learn More</a>
           </div>
         </div>
@@ -173,7 +176,17 @@
             <div class="content">
               <h3>Why Choose Depth</h3>
               <p>
-                Even I don't know
+                DEPTH is a one of its kind society in DTU
+                which has incredible excellence in Physics. 
+                The fact that our college has not seen many such societies as ours, which focuses considerably
+                on regular lecture classes given by the society member themselves, with the help of recognized
+                unequalled resources, renders the reason that DEPTH should be associated with DTU. Good
+                knowledge should be always be put to good use. This is the purpose of the society; the society
+                members attempt to combine learning with ideas to help grasp the practical know-how for
+                future study and more importantly, carry out research under concerned professors, not only for
+                their own benefit but also for the fellow students.
+                If not for research purposes, students who find physics anything but problematical would be
+                greatly benefited.
               </p>
               <div class="text-center">
                 <a href="about.html" class="more-btn">Learn More <i class="bx bx-chevron-right"></i></a>
@@ -186,22 +199,39 @@
                 <div class="col-xl-4 d-flex align-items-stretch">
                   <div class="icon-box mt-4 mt-xl-0">
                     <i class="bx bx-receipt"></i>
-                    <h4>Corporis voluptates sit</h4>
-                    <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                    <h4>About Aurora</h4>
+                    <p>AURORA in association with Invictus is the official TechFest of DTU which is accompanied by a
+                      lot of thrill, joy and ecstasy. With a footfall of around 20,000+ from around the country it is one of
+                      the most esteemed events. DEPTH plays an unequivocal role in the TechFest by organizing
+                      many events such as Physics Workshops and Seminars by renowned speakers as well as
+                      various competitions and events like Virtual Planetarium, Treasure Hunt and many more</p>
                   </div>
                 </div>
                 <div class="col-xl-4 d-flex align-items-stretch">
                   <div class="icon-box mt-4 mt-xl-0">
                     <i class="bx bx-cube-alt"></i>
-                    <h4>Ullamco laboris ladore pan</h4>
-                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                    <h4>Physics Lectures</h4>
+                    <p>DEPTH conducts physics lectures on various topics ranging from basic to advanced physics.
+                      These lectures help students in developing a better apprehension of what lies ahead in the field
+                      of research and advanced physics. The lectures are designed in such a way that enables the
+                      tutors to clear the doubts associated with the conventional college lectures and help students
+                      expand their knowledge about various fields of physics. One of the most important research
+                      problems is the ‘validity’ of the research question itself. The motto of these classes is to overcome
+                      this obstacle by attaining a deeper insight of the subject which enables one to raise insightful
+                      questions.
+                      </p>
                   </div>
                 </div>
                 <div class="col-xl-4 d-flex align-items-stretch">
                   <div class="icon-box mt-4 mt-xl-0">
                     <i class="bx bx-images"></i>
-                    <h4>Labore consequatur</h4>
-                    <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+                    <h4>Observational trips and Industrial Visits</h4>
+                    <p>DEPTH organises various industrial visits and observational trips in order to make learning more
+                      fun. In the previous years, the society has conducted observational trips at astronomical sites in
+                      Uttarakhand, Rajasthan etc. The main purpose behind these trips is to comprehend the
+                      students with practical knowledge and develop a bonding among the team members. These
+                      trips give them an opportunity to expand their knowledge horizon beyond their regular academic
+                      curriculum. These trips act as a delightful way to instill scientific knowledge among young minds</p>
                   </div>
                 </div>
               </div>
@@ -213,7 +243,7 @@
     </section><!-- End Why Us Section -->
 
     <!-- ======= Features Section ======= -->
-    <section id="features" class="features">
+    <!-- <section id="features" class="features">
       <div class="container" data-aos="fade-up">
 
         <div class="row" data-aos="zoom-in" data-aos-delay="100">
@@ -292,15 +322,15 @@
         </div>
 
       </div>
-    </section><!-- End Features Section -->
+    </section>End Features Section -->
 
     <!-- ======= Popular Courses Section ======= -->
     <section id="popular-courses" class="courses">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Courses</h2>
-          <p>Popular Courses</p>
+          <h2>Projects</h2>
+          <p>Upcoming Projects</p>
         </div>
 
         <div class="row" data-aos="zoom-in" data-aos-delay="100">
@@ -311,7 +341,7 @@
               <div class="course-content">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                   <h4>Web Development</h4>
-                  <p class="price">$169</p>
+                  <!-- <p class="price">$169</p> -->
                 </div>
 
                 <h3><a href="course-details.html">Website Design</a></h3>
@@ -322,9 +352,9 @@
                     <span>Antonio</span>
                   </div>
                   <div class="trainer-rank d-flex align-items-center">
-                    <i class="bx bx-user"></i>&nbsp;50
+                    <i class="bx bx-user"></i>&nbsp;00
                     &nbsp;&nbsp;
-                    <i class="bx bx-heart"></i>&nbsp;65
+                    <i class="bx bx-heart"></i>&nbsp;00
                   </div>
                 </div>
               </div>
@@ -337,7 +367,7 @@
               <div class="course-content">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                   <h4>Marketing</h4>
-                  <p class="price">$250</p>
+                  <!-- <p class="price">$250</p> -->
                 </div>
 
                 <h3><a href="course-details.html">Search Engine Optimization</a></h3>
@@ -348,9 +378,9 @@
                     <span>Lana</span>
                   </div>
                   <div class="trainer-rank d-flex align-items-center">
-                    <i class="bx bx-user"></i>&nbsp;35
+                    <i class="bx bx-user"></i>&nbsp;00
                     &nbsp;&nbsp;
-                    <i class="bx bx-heart"></i>&nbsp;42
+                    <i class="bx bx-heart"></i>&nbsp;00
                   </div>
                 </div>
               </div>
@@ -363,7 +393,7 @@
               <div class="course-content">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                   <h4>Content</h4>
-                  <p class="price">$180</p>
+                  <!-- <p class="price">$180</p> -->
                 </div>
 
                 <h3><a href="course-details.html">Copywriting</a></h3>
@@ -374,9 +404,9 @@
                     <span>Brandon</span>
                   </div>
                   <div class="trainer-rank d-flex align-items-center">
-                    <i class="bx bx-user"></i>&nbsp;20
+                    <i class="bx bx-user"></i>&nbsp;00
                     &nbsp;&nbsp;
-                    <i class="bx bx-heart"></i>&nbsp;85
+                    <i class="bx bx-heart"></i>&nbsp;00
                   </div>
                 </div>
               </div>
@@ -469,29 +499,20 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-contact">
+          <!-- <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Mentor</h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
+              Depth <br>
+              vale<br>
+              United States <br><br> -->
+              <!-- <strong>Phone:</strong> +1 5589 55488 55<br>
               <strong>Email:</strong> info@example.com<br>
             </p>
-          </div>
+          </div> -->
 
-          <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
-          </div>
+          <!-- <div class="colS -->
 
-          <div class="col-lg-3 col-md-6 footer-links">
+          <!-- <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
@@ -500,23 +521,90 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
             </ul>
-          </div>
+          </div> -->
 
-          <div class="col-lg-4 col-md-6 footer-newsletter">
+          <!-- <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Join Our Newsletter</h4>
             <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
-          </div>
+          </div> -->
 
         </div>
       </div>
     </div>
 
     <div class="container d-md-flex py-4">
+      <div class="Made by">
+        <h2>Made with <span style="color: #e25555;">&hearts;</span> by</h2>
+      </div>
 
-      <div class="mr-md-auto text-center text-md-left">
+      <div class="row" data-aos="zoom-in" data-aos-delay="100">
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="member">
+            <img src="assets/img/trainers/trainer-1.jpg" class="img-fluid" alt="">
+            <div class="member-content">
+              <h4>Priyansh Tyagi</h4>
+              <!-- <span>Web Development</span> -->
+              <!-- <p>
+                Magni qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut
+              </p> -->
+              <div class="social">
+                <!-- <a href=""><i class="icofont-twitter"></i></a>
+                <a href=""><i class="icofont-facebook"></i></a> -->
+                <a href=""><i class="icofont-instagram"></i></a>
+                <a href=""><i class="icofont-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="member">
+            <img src="assets/img/trainers/trainer-2.jpg" class="img-fluid" alt="">
+            <div class="member-content">
+              <h4>Sakshi Arora</h4>
+              <!-- <span>Marketing</span> -->
+              <!-- <p>
+                Repellat fugiat adipisci nemo illum nesciunt voluptas repellendus. In architecto rerum rerum temporibus
+              </p> -->
+              <div class="social">
+                <!-- <a href=""><i class="icofont-twitter"></i></a>
+                <a href=""><i class="icofont-facebook"></i></a> -->
+                <a href=""><i class="icofont-instagram"></i></a>
+                <a href=""><i class="icofont-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="member">
+            <img src="assets/img/trainers/trainer-3.jpg" class="img-fluid" alt="">
+            <div class="member-content">
+              <h4>Pranay Khosla</h4>
+              <!-- <span>Content</span> -->
+              <!-- <p>
+                Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara
+              </p> -->
+              <div class="social">
+                <!-- <a href=""><i class="icofont-twitter"></i></a>
+                <a href=""><i class="icofont-facebook"></i></a> -->
+                <a href=""><i class="icofont-instagram"></i></a>
+                <a href=""><i class="icofont-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+  </section>
+        
+
+
         <div class="copyright">
           &copy; Copyright <strong><span>DEPTH DTU</span></strong>. All Rights Reserved
         </div>
@@ -525,15 +613,15 @@
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/mentor-free-education-bootstrap-theme/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+          Designed by <a href="https://bootstrapmade.com/" target="_blank">BootstrapMade</a>
         </div>
       </div>
-      <div class="social-links text-center text-md-right pt-3 pt-md-0">
-        <a href="#" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
+      <!-- <div class="social-links text-center text-md-right pt-3 pt-md-0">
+        <a href="#" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a> -->
         <a href="https://www.facebook.com/depthdtu" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://instagram.com/depthsoc?igshid=1xu5q0xi5i32k" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" target="_blank" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <!-- <a href="#" target="_blank" class="google-plus"><i class="bx bxl-skype"></i></a>
+        <a href="#" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
       </div>
     </div>
   </footer><!-- End Footer -->
