--- a/contact.html
+++ b/contact.html
@@ -176,29 +176,20 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-contact">
+          <!-- <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Mentor</h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
+              Depth <br>
+              vale<br>
+              United States <br><br> -->
+              <!-- <strong>Phone:</strong> +1 5589 55488 55<br>
               <strong>Email:</strong> info@example.com<br>
             </p>
-          </div>
+          </div> -->
 
-          <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
-          </div>
+          <!-- <div class="colS -->
 
-          <div class="col-lg-3 col-md-6 footer-links">
+          <!-- <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
@@ -207,15 +198,15 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
             </ul>
-          </div>
+          </div> -->
 
-          <div class="col-lg-4 col-md-6 footer-newsletter">
+          <!-- <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Join Our Newsletter</h4>
             <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
-          </div>
+          </div> -->
 
         </div>
       </div>
@@ -235,12 +226,12 @@
           Designed by <a href="https://bootstrapmade.com/" target="_blank">BootstrapMade</a>
         </div>
       </div>
-      <div class="social-links text-center text-md-right pt-3 pt-md-0">
-        <a href="#" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
+      <!-- <div class="social-links text-center text-md-right pt-3 pt-md-0">
+        <a href="#" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a> -->
         <a href="https://www.facebook.com/depthdtu" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://instagram.com/depthsoc?igshid=1xu5q0xi5i32k" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" target="_blank" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <!-- <a href="#" target="_blank" class="google-plus"><i class="bx bxl-skype"></i></a>
+        <a href="#" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
       </div>
     </div>
   </footer><!-- End Footer -->
