form added, project page changed, blogs added

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="#about">About</a></li>
           <li><a href="courses.html">Projects</a></li>
           <li><a href="trainers.html">Mentors</a></li>
           <!-- <li><a href="events.html">Events</a></li> -->
-          <!-- <li><a href="pricing.html">Pricing</a></li> -->
+          <li><a href="pricing.html">Blogs</a></li>
           <!-- <li class="drop-down"><a href="">Drop Down</a>
             <ul>
               <li><a href="#"></a></li>
@@ -100,6 +100,37 @@
 
   <main id="main">
 
+  	<!-- ======= Counts Section ======= -->
+    <section id="counts" class="counts section-bg">
+      <div class="container">
+
+        <div class="row counters">
+
+          <div class="col-sm-4 col-6 text-center">
+            <span data-toggle="counter-up">80</span>
+            <p>Students</p>
+          </div>
+
+          <div class="col-sm-4 col-6 text-center">
+            <span data-toggle="counter-up">12</span>
+            <p>Projects</p>
+          </div>
+
+          <!-- <div class="col-lg-3 col-6 text-center">
+            <span data-toggle="counter-up">42</span>
+            <p>Events</p>
+          </div> -->
+
+          <div class="col-sm-4 col-6 text-center">
+            <span data-toggle="counter-up">8</span>
+            <p>Mentors</p>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Counts Section -->
+
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
@@ -136,37 +167,6 @@
 
       </div>
     </section><!-- End About Section -->
-
-    <!-- ======= Counts Section ======= -->
-    <section id="counts" class="counts section-bg">
-      <div class="container">
-
-        <div class="row counters">
-
-          <div class="col-sm-4 col-6 text-center">
-            <span data-toggle="counter-up">80</span>
-            <p>Students</p>
-          </div>
-
-          <div class="col-sm-4 col-6 text-center">
-            <span data-toggle="counter-up">12</span>
-            <p>Projects</p>
-          </div>
-
-          <!-- <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">42</span>
-            <p>Events</p>
-          </div> -->
-
-          <div class="col-sm-4 col-6 text-center">
-            <span data-toggle="counter-up">8</span>
-            <p>Mentors</p>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Counts Section -->
 
     <!-- ======= Why Us Section ======= -->
     <section id="why-us" class="why-us">
@@ -509,9 +509,9 @@
 
       <div class="container" data-aos="fade-up">
 
-        <div class="row mt-5">
+        <div class="row mt-5 align-items-center justify-content-auto">
 
-          <div class="col-lg-4">
+          <!-- <div class="col-lg-4">
             <div class="info">
               <div class="address">
                 <a href="https://goo.gl/maps/qyAhCxatN8qbuXNM8" target="_blank"><i class="icofont-google-map"></i></a>
@@ -522,7 +522,7 @@
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>kira@deathnote.com</p>
+                <p>depthdtu20@gmail.com</p>
               </div>
 
               <div class="phone">
@@ -533,9 +533,15 @@
 
             </div>
 
+          </div> -->
+
+          <div class="col col-lg-12 align-items-center ml-5">
+
+          	<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScHa7xoE_5n7gU0V3l7yucFjqMWevxd0W_umTqXlPcOnYsVGA/viewform?embedded=true" width="640" height="1355" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
           </div>
 
-          <div class="col-lg-8 mt-5 mt-lg-0">
+         <!--  <div class="col-lg-8 mt-5 mt-lg-0">
 
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="form-row">
@@ -564,7 +570,7 @@
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
 
-          </div>
+          </div> -->
 
         </div>
 
@@ -623,13 +629,13 @@
             <h4><strong>Made with <span style="color: #e25555;">&hearts;</span> by</strong></h4>
           </div>
 
-        <div class="container d-md-flex py-4">
+        <div class="container d-md-flex py-4 text-center">
           
           <div class="row" data-aos="zoom-in" data-aos-delay="100">
 
             <div class="col-md-4 d-flex align-items-stretch">
               <div class="member">
-                <img src="assets/img/trainers/trainer-1.jpg" class="img-fluid rounded-circle" alt="">
+                <!-- <img src="assets/img/trainers/trainer-1.jpg" class="img-fluid rounded-circle" alt=""> -->
                 <div class="member-content text-center">
                   <br><h4>Priyansh Tyagi</h4>
                   <div class="social">
@@ -642,7 +648,7 @@
 
             <div class="col-md-4 d-flex align-items-stretch">
               <div class="member">
-                <img src="assets/img/trainers/trainer-2.jpg" class="img-fluid rounded-circle" alt="">
+                <!-- <img src="assets/img/trainers/trainer-2.jpg" class="img-fluid rounded-circle" alt=""> -->
                 <div class="member-content text-center">
                   <br><h4>Sakshi Arora</h4>
                   <div class="social">
@@ -655,7 +661,7 @@
     
             <div class="col-md-4 d-flex align-items-stretch">
               <div class="member">
-                <img src="assets/img/trainers/trainer-3.jpg" class="img-fluid rounded-circle" alt="">
+                <!-- <img src="assets/img/trainers/trainer-3.jpg" class="img-fluid rounded-circle" alt=""> -->
                 <div class="member-content text-center">
                   <br><h4>Pranay Khosla</h4>
                   <div class="social">
