changes in contact, mentors

--- a/contact.html
+++ b/contact.html
@@ -97,10 +97,33 @@
     </div><!-- End Breadcrumbs -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+
+<section id="contact" class="contact">
+
+      <div data-aos="fade-up">
+        <!-- <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d55968.01203526608!2d77.1373902!3d28.7493945!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x87d470ca1c30d1b0!2sDelhi%20Technological%20University!5e0!3m2!1sen!2sin!4v1608573853249!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe> -->
+        <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6995.99123535829!2d77.1163066!3d28.7495478!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d01242c91efaf%3A0xbb4573045b4b5348!2sDTU%20Entrance%20gate!5e0!3m2!1sen!2sin!4v1608797745329!5m2!1sen!2sin" width="800" height="600" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      </div>
+
+      <div class="container" data-aos="fade-up">
+
+        <div class="row mt-5 align-items-center justify-content-auto">
+
+          <div class="col col-lg-12 align-items-center ml-5">
+
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScHa7xoE_5n7gU0V3l7yucFjqMWevxd0W_umTqXlPcOnYsVGA/viewform?embedded=true" width="640" height="1355" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
+          </div>
+
+        </div>
+
+      </div>
+</section>
+
+    <!-- <section id="contact" class="contact">
       <div data-aos="fade-up">
         <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d55968.01203526608!2d77.1373902!3d28.7493945!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x87d470ca1c30d1b0!2sDelhi%20Technological%20University!5e0!3m2!1sen!2sin!4v1608573853249!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-        <!-- <iframe style="border:0; width: 100%; height: 350px;" src="https://goo.gl/maps/skc5ZPiMjJjEA7Xm8" frameborder="0" allowfullscreen></iframe> -->
+        <iframe style="border:0; width: 100%; height: 350px;" src="https://goo.gl/maps/skc5ZPiMjJjEA7Xm8" frameborder="0" allowfullscreen></iframe>
       </div>
 
       <div class="container" data-aos="fade-up">
@@ -165,7 +188,7 @@
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section> --><!-- End Contact Section -->
 
   </main><!-- End #main -->
 
