Added blogs page and assets

--- a/about.html
+++ b/about.html
@@ -56,11 +56,11 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li class="active"><a href="about.html">About</a></li>
-          <li><a href="courses.html">Projects</a></li>
-          <li><a href="trainers.html">Mentors</a></li>
-          <!-- <li><a href="events.html">Events</a></li>
-          <li><a href="pricing.html">Pricing</a></li>
-          <li class="drop-down"><a href="">Drop Down</a>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="mentors.html">Mentors</a></li>
+          <!-- <li><a href="events.html">Events</a></li> -->
+          <li><a href="blogs.html">Blogs</a></li>
+          <!-- <li class="drop-down"><a href="">Drop Down</a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="drop-down"><a href="#">Deep Drop Down</a>
@@ -118,6 +118,7 @@
               <li><i class="icofont-check-circled"></i> The goal is to create a 'CHANGE' with out of the
                 box ideas and guiding individuals to build them into the creators of this change.</li>
             </ul>
+            <img src="assets/img/2 (1).jpg" class="img-fluid" alt="">
             <!-- <p>
               Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
             </p> -->
