--- a/contact.html
+++ b/contact.html
@@ -55,11 +55,11 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="courses.html">Projects</a></li>
-          <li><a href="trainers.html">Mentors</a></li>
-          <!-- <li><a href="events.html">Events</a></li>
-          <li><a href="pricing.html">Pricing</a></li>
-          <li class="drop-down"><a href="">Drop Down</a>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="mentors.html">Mentors</a></li>
+          <!-- <li><a href="events.html">Events</a></li> -->
+          <li><a href="blogs.html">Blogs</a></li>
+          <!-- <li class="drop-down"><a href="">Drop Down</a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="drop-down"><a href="#">Deep Drop Down</a>
@@ -247,7 +247,7 @@
           <div class="row" data-aos="zoom-in" data-aos-delay="100">
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
               <div class="member">
-                <img src="assets/img/trainers/trainer-1.jpg" class="img-fluid" alt="">
+                <!-- <img src="assets/img/trainers/trainer-1.jpg" class="img-fluid" alt=""> -->
                 <div class="member-content">
                   <h4>Priyansh Tyagi</h4>
                   <!-- <span>Web Development</span> -->
@@ -266,7 +266,7 @@
     
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
               <div class="member">
-                <img src="assets/img/trainers/trainer-2.jpg" class="img-fluid" alt="">
+                <!-- <img src="assets/img/trainers/trainer-2.jpg" class="img-fluid" alt=""> -->
                 <div class="member-content">
                   <h4>Sakshi Arora</h4>
                   <!-- <span>Marketing</span> -->
@@ -285,7 +285,7 @@
     
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
               <div class="member">
-                <img src="assets/img/trainers/trainer-3.jpg" class="img-fluid" alt="">
+                <!-- <img src="assets/img/trainers/trainer-3.jpg" class="img-fluid" alt=""> -->
                 <div class="member-content">
                   <h4>Pranay Khosla</h4>
                   <!-- <span>Content</span> -->
