--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="courses.html">Projects</a></li>
-          <li><a href="#trainers">Mentors</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="mentors.html">Mentors</a></li>
           <!-- <li><a href="events.html">Events</a></li> -->
-          <li><a href="pricing.html">Blogs</a></li>
+          <li><a href="blogs.html">Blogs</a></li>
           <!-- <li class="drop-down"><a href="">Drop Down</a>
             <ul>
               <li><a href="#"></a></li>
