--- a/blogs.html
+++ b/blogs.html
@@ -34,7 +34,7 @@
 				<div class="profile-section pt-3 pt-lg-0">
 				    <img class="profile-image mb-3 rounded-circle mx-auto" src="assets/img/logo.jpeg" alt="image" >			
 					
-					<div class="bio mb-3">Hi, My name is Depth Dtu me bni yhain khtm.<br>
+					<div class="bio mb-3">Depth Dtu <br>
 						<!-- <a href="about.html">Find out more about us</a></div>//bio -->
 					<!-- <ul class="social-list list-inline py-3 mx-auto"> -->
 			            <!-- <li class="list-inline-item"><a href="#"><i class="fab fa-twitter fa-fw"></i></a></li> -->
@@ -70,7 +70,7 @@
     <div class="main-wrapper">
 	    <section class="cta-section theme-bg-light py-5">
 		    <div class="container text-center">
-			    <h2 class="heading">Blogs by the bakchods of Depth</h2>
+			    <h2 class="heading">Blogs by Depth</h2>
 			    <div class="intro">Welcome to oue blog. Subscribe and get our latest blog post in your inbox.</div>
 			    <form class="signup-form form-inline justify-content-center pt-3">
                     <div class="form-group">
