--- a/blogs.html
+++ b/blogs.html
@@ -68,26 +68,27 @@
     </header>
     
     <div class="main-wrapper">
-	    <section class="cta-section theme-bg-light py-5">
-		    <div class="container text-center">
-			    <h2 class="heading">Blogs by Depth</h2>
-			    <div class="intro">Welcome to oue blog. Subscribe and get our latest blog post in your inbox.</div>
-			    <form class="signup-form form-inline justify-content-center pt-3">
-                    <div class="form-group">
-                        <label class="sr-only" for="semail">Your email</label>
-                        <input type="email" id="semail" name="semail1" class="form-control mr-md-1 semail" placeholder="Email Here">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Subscribe</button>
-                </form>
-		    </div><!--//container-->
-	    </section>
+	    <!-- <section class="cta-section theme-bg-light py-5"> -->
+		    <!-- <div class="container text-center"> -->
+			    <!-- <h2 class="heading">Blogs by Depth</h2> -->
+			    <!-- <div class="intro">Welcome to oue blog. Subscribe and get our latest blog post in your inbox.</div> -->
+			    <!-- <form class="signup-form form-inline justify-content-center pt-3"> -->
+                    <!-- <div class="form-group"> -->
+                        <!-- <label class="sr-only" for="semail">Your email</label> -->
+                        <!-- <input type="email" id="semail" name="semail1" class="form-control mr-md-1 semail" placeholder="Email Here"> -->
+                    <!-- </div> -->
+                    <!-- <button type="submit" class="btn btn-primary">Subscribe</button> -->
+                <!-- </form> -->
+			<!-- </div> -->
+			<!--//container-->
+	    <!-- </section> -->
 	    <section class="blog-list px-3 py-5 p-md-5">
 		    <div class="container">
 			    <div class="item mb-5">
 				    <div class="media">
 					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets2/images/blog/blog-post-thumb-1.jpg" alt="image">
 					    <div class="media-body">
-						    <h3 class="title mb-1"><a href="blog-post.html">Why Every Developer Should Have A Blog</a></h3>
+						    <h3 class="title mb-1"><a href="blog-post1.html">Why Every Developer Should Have A Blog</a></h3>
 						    <div class="meta mb-1"><span class="date">Published 2 days ago</span><span class="time">5 min read</span><span class="comment"><a href="#">8 comments</a></span></div>
 						    <div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
 						    <a class="more-link" href="blog-post.html">Read more &rarr;</a>
@@ -98,7 +99,7 @@
 				    <div class="media">
 					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets2/images/blog/blog-post-thumb-2.jpg" alt="image">
 					    <div class="media-body">
-						    <h3 class="title mb-1"><a href="blog-post.html">A Guide to Becoming a Full-Stack Developer</a></h3>
+						    <h3 class="title mb-1"><a href="blog-post2.html">A Guide to Becoming a Full-Stack Developer</a></h3>
 						    <div class="meta mb-1"><span class="date">Published 3 months ago</span><span class="time">3 min read</span><span class="comment"><a href="#">26 comments</a></span></div>
 						    <div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
 						    <a class="more-link" href="blog-post.html">Read more &rarr;</a>
