--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
   <main id="main">
 
   	<!-- ======= Counts Section ======= -->
-    <section id="counts" class="counts section-bg">
-      <div class="container">
+    <!-- <section id="counts" class="counts section-bg"> -->
+      <!-- <div class="container"> -->
 
-        <div class="row counters">
+        <!-- <div class="row counters">
 
           <div class="col-sm-4 col-6 text-center">
             <span data-toggle="counter-up">80</span>
@@ -114,22 +114,23 @@
           <div class="col-sm-4 col-6 text-center">
             <span data-toggle="counter-up">12</span>
             <p>Projects</p>
-          </div>
+          </div> -->
 
           <!-- <div class="col-lg-3 col-6 text-center">
             <span data-toggle="counter-up">42</span>
             <p>Events</p>
           </div> -->
 
-          <div class="col-sm-4 col-6 text-center">
+          <!-- <div class="col-sm-4 col-6 text-center">
             <span data-toggle="counter-up">8</span>
             <p>Mentors</p>
-          </div>
+          </div> -->
 
-        </div>
+        <!-- </div> -->
 
-      </div>
-    </section><!-- End Counts Section -->
+      <!-- </div> -->
+    <!-- </section> -->
+    <!-- End Counts Section -->
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
@@ -173,7 +174,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="row">
-          <div class="col-lg-4 d-flex align-items-stretch">
+          <div class="d-flex flex-row bd-highlight mb-3">
             <div class="content">
               <h3>Why Choose Depth</h3>
               <p>
@@ -194,10 +195,10 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-8 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+          <div class="d-flex flex-row bd-highlight mb-3" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-boxes d-flex flex-column justify-content-center">
               <div class="row">
-                <div class="col-xl-4 d-flex align-items-stretch">
+                <div class="d-flex flex-row bd-highlight mb-3">
                   <div class="icon-box mt-4 mt-xl-0">
                     <i class="bx bx-receipt"></i>
                     <h4>About Aurora</h4>
@@ -206,9 +207,15 @@
                       the most esteemed events. DEPTH plays an unequivocal role in the TechFest by organizing
                       many events such as Physics Workshops and Seminars by renowned speakers as well as
                       various competitions and events like Virtual Planetarium, Treasure Hunt and many more</p>
+                      <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-left" data-aos-delay="100">
+                        <img src="assets/img/4-1.jpg" class="img-thumbnail" alt="">
+                        <img src="assets/img/3-1.jpg" class="img-thumbnail" alt="">
+                        <img src="assets/img/6-1.jpg" class="img-thumbnail" alt="">
+                        <!-- <img src="assets/img/5-1.jpg" class="img-thumbnail" alt=""> -->
+                      </div>
                   </div>
                 </div>
-                <div class="col-xl-4 d-flex align-items-stretch">
+                <div class="d-flex flex-row bd-highlight mb-3">
                   <div class="icon-box mt-4 mt-xl-0">
                     <i class="bx bx-cube-alt"></i>
                     <h4>Physics Lectures</h4>
@@ -221,9 +228,14 @@
                       this obstacle by attaining a deeper insight of the subject which enables one to raise insightful
                       questions.
                       </p>
+                      <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-left" data-aos-delay="100">
+                        <img src="assets/img/2-1.jpg" class="img-thumbnail" alt="">
+                        <img src="assets/img/1.jpg" class="img-thumbnail" alt="">
+                        <img src="assets/img/2 (1).jpg" class="img-thumbnail" alt="">
+                      </div>
                   </div>
                 </div>
-                <div class="col-xl-4 d-flex align-items-stretch">
+                <div class="d-flex flex-row bd-highlight mb-3">
                   <div class="icon-box mt-4 mt-xl-0">
                     <i class="bx bx-images"></i>
                     <h4>Observational trips and Industrial Visits</h4>
@@ -233,6 +245,11 @@
                       students with practical knowledge and develop a bonding among the team members. These
                       trips give them an opportunity to expand their knowledge horizon beyond their regular academic
                       curriculum. These trips act as a delightful way to instill scientific knowledge among young minds</p>
+                      <div class="col-lg-4 col-md-6 d-flex align-items-stretchr" data-aos="fade-left" data-aos-delay="100">
+                        <img src="assets/img/IMG-20171202-WA0084.jpg" class="img-thumbnail" alt="">
+                        <img src="assets/img/trip 2.JPG" class="img-thumbnail" alt="">
+                        <img src="assets/img/trip 3.jpg" class="img-thumbnail" alt="">
+                      </div>
                   </div>
                 </div>
               </div>
